--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,9 @@
     "url": "https://github.com/kaspernj/velocious/issues"
   },
   "homepage": "https://github.com/kaspernj/velocious#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "jasmine": "^3.6.3",
+    "node-fetch": "^2.6.1"
+  }
 }
