--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "jasmine": "^3.6.3",
     "node-fetch": "^2.6.1"
+  },
+  "dependencies": {
+    "@kaspernj/object-digger": "^1.0.2"
   }
 }
