--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-fetch": "^2.6.1"
   },
   "dependencies": {
-    "@kaspernj/object-digger": "^1.0.2"
+    "@kaspernj/object-digger": "^1.0.2",
+    "ejs": "^3.1.6"
   }
 }
