--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -1,4 +1,16 @@
 before_script:
   - npm install
+  - wait-for-it mysql:3306
+services:
+  mysql:
+    environment:
+      MYSQL_USER: peakflow
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: velocious_test
+    image: mysql:8.0.22
+    expose:
+      - 3306
+    mem_limit: 2048m
 script:
   - npm test
