--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@kaspernj/object-digger": "^1.0.2",
     "ejs": "^3.1.6",
-    "escape-string-regexp": "^1.0.5"
+    "escape-string-regexp": "^1.0.5",
+    "inflection": "^1.13.1"
   }
 }
