--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "node-fetch": "^2.6.1"
   },
   "dependencies": {
-    "@kaspernj/object-digger": "^1.0.2",
+    "diggerize": "^1.0.3",
     "ejs": "^3.1.6",
     "escape-string-regexp": "^1.0.5"
   }
