--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "description": "",
   "devDependencies": {
     "jasmine": "^3.9.0",
+    "mysql": "^2.18.1",
     "node-fetch": "^2.6.1"
   },
   "dependencies": {
