--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -2,7 +2,7 @@ before_script:
   - cp spec/support/mysql.peakflow.json spec/support/mysql.json
   - cp spec/dummy/config/databases.peakflow.json spec/dummy/config/databases.json
   - npm install
-  - wait-for-it mysql:3306
+  - wait-for-it mariadb:3306
 services:
   mariadb:
     environment:
