--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -1,5 +1,5 @@
 before_script:
-  - cp spec/dummy/config/databases.peakflow.json spec/dummy/config/databases.json
+  - cp spec/dummy/config/databases.peakflow.cjs spec/dummy/config/databases.cjs
   - npm install
   - wait-for-it mariadb:3306
 services:
