--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "diggerize": "^1.0.3",
     "ejs": "^3.1.6",
     "escape-string-regexp": "^1.0.5",
-    "inflection": "^2.0.0",
-    "qs": "^6.11.2"
+    "inflection": "^2.0.0"
   }
 }
