--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "diggerize": "^1.0.3",
     "ejs": "^3.1.6",
     "escape-string-regexp": "^1.0.5",
+    "incorporator": "^1.0.2",
     "inflection": "^2.0.0"
   }
 }
