--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -1,3 +1,6 @@
+before_install:
+  - curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
+  - sudo apt-get install -y nodejs
 before_script:
   - cp spec/dummy/src/config/database.peakflow.mjs spec/dummy/src/config/database.mjs
   - npm install
