--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -1,5 +1,6 @@
 before_install:
-  - curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
+  - echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_20.x nodistro main" | sudo tee /etc/apt/sources.list.d/nodesource.list
+  - sudo apt-get update
   - sudo apt-get install -y nodejs
 before_script:
   - cp spec/dummy/src/config/configuration.peakflow.mjs spec/dummy/src/config/configuration.mjs
