--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "escape-string-regexp": "^1.0.5",
     "incorporator": "^1.0.2",
     "inflection": "^3.0.0",
+    "sql.js": "^1.12.0",
     "strftime": "^0.10.2"
   }
 }
