--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "devDependencies": {
     "jasmine": "^5.0.2",
     "mysql": "^2.18.1",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "require-context": "^1.1.0"
   },
   "dependencies": {
     "diggerize": "^1.0.5",
