--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "debounce": "^2.2.0",
     "diggerize": "^1.0.5",
     "ejs": "^3.1.6",
+    "env-sense": "^1.0.0",
     "escape-string-regexp": "^1.0.5",
     "incorporator": "^1.0.2",
     "inflection": "^3.0.0",
