--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "inflection": "^3.0.0",
     "sql-escape-string": "^1.1.0",
     "sql.js": "^1.12.0",
-    "strftime": "^0.10.2"
+    "strftime": "^0.10.2",
+    "uuid": "^11.1.0"
   }
 }
