--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sqlite3": "^5.1.7"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "better-localstorage": "^1.0.7",
     "debounce": "^2.2.0",
     "diggerize": "^1.0.5",
