--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   "description": "",
   "devDependencies": {
     "jasmine": "^5.0.2",
+    "mssql": "^11.0.1",
     "mysql": "^2.18.1",
     "node-fetch": "^3.3.1",
     "require-context": "^1.1.0",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "tedious": "^18.6.1"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
