--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -38,8 +38,9 @@ builds:
   build_2:
     name: MS-SQL
     script:
-      - cp spec/dummy/src/config/configuration.peakflow.mssql.js spec/dummy/src/config/configuration.js
       - wait-for-it mssql:1433
+      - cp spec/dummy/src/config/configuration.peakflow.mssql.js spec/dummy/src/config/configuration.js
+      - cp spec/dummy && npx velocious db:create
       - npm test
   build_3:
     name: SQLite
