--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -30,6 +30,8 @@ services:
       - 1433
     mem_limit: 4096m
     restart_policy: on-failure
+before_script:
+  - cd spec/dummy && npx velocious db:create
 builds:
   build_1:
     name: MariaDB
@@ -42,7 +44,6 @@ builds:
     script:
       - wait-for-it mssql:1433
       - cp spec/dummy/src/config/configuration.peakflow.mssql.js spec/dummy/src/config/configuration.js
-      - cd spec/dummy && npx velocious db:create
       - npm test
   build_3:
     name: SQLite
