--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "require-context": "^1.1.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "tedious": "^18.6.1"
+    "tedious": "^18.6.1",
+    "uniqunize": "^1.0.1"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
