--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "escape-string-regexp": "^1.0.5",
     "incorporator": "^1.0.2",
     "inflection": "^3.0.0",
+    "pure-uuid": "^1.8.1",
     "sql-escape-string": "^1.1.0",
     "sql.js": "^1.12.0",
-    "strftime": "^0.10.2",
-    "uuid": "^12.0.0"
+    "strftime": "^0.10.2"
   }
 }
