--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/kaspernj/velocious#readme",
   "description": "",
   "devDependencies": {
+    "awaitery": "^1.0.1",
     "jasmine": "^5.0.2",
     "mssql": "^11.0.1",
     "mysql": "^2.18.1",
