--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ spec/dummy/db/*.sqlite
 spec/dummy/src/config/configuration.js
 spec/dummy/src/config/configuration.mariadb.js
 spec/dummy/src/config/configuration.mssql.js
+spec/dummy/src/config/configuration.pgsql.js
 spec/dummy/src/config/configuration.sqlite.js
 spec/support/mysql.json
