--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "incorporator": "^1.0.2",
     "inflection": "^3.0.0",
     "pure-uuid": "^1.8.1",
+    "set-state-compare": "^1.0.58",
     "sql-escape-string": "^1.1.0",
     "sql.js": "^1.12.0",
     "strftime": "^0.10.2"
