--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -8,6 +8,7 @@ before_script:
   - npm install
 environment:
   NODE_ENV: test
+  VELOCIOUS_TEST_DIR: /home/build/project/spec
 services:
   mariadb:
     environment:
@@ -50,7 +51,7 @@ builds:
       - sleep 5
       - cd spec/dummy && npx velocious db:create
       - cd spec/dummy && npx velocious db:migrate
-      - VELOCIOUS_TEST_DIR=/home/build/project/spec cd spec/dummy && npx velocious test
+      - cd spec/dummy && npx velocious test
   build_2:
     name: MS-SQL
     script:
@@ -59,7 +60,7 @@ builds:
       - sleep 5
       - cd spec/dummy && npx velocious db:create
       - cd spec/dummy && npx velocious db:migrate
-      - VELOCIOUS_TEST_DIR=/home/build/project/spec cd spec/dummy && npx velocious test
+      - cd spec/dummy && npx velocious test
   build_3:
     name: PG-SQL
     script:
@@ -69,7 +70,7 @@ builds:
       - sleep 5
       - cd spec/dummy && npx velocious db:create
       - cd spec/dummy && npx velocious db:migrate
-      - VELOCIOUS_TEST_DIR=/home/build/project/spec cd spec/dummy && npx velocious test
+      - cd spec/dummy && npx velocious test
   build_4:
     name: SQLite
     script:
@@ -78,4 +79,4 @@ builds:
       - sleep 5
       - cd spec/dummy && npx velocious db:create
       - cd spec/dummy && npx velocious db:migrate
-      - VELOCIOUS_TEST_DIR=/home/build/project/spec cd spec/dummy && npx velocious test
+      - cd spec/dummy && npx velocious test
