--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/kaspernj/velocious#readme",
   "description": "",
   "dependencies": {
+    "async-mutex": "^0.5.0",
     "awaitery": "^1.0.1",
     "bcryptjs": "^3.0.2",
     "better-localstorage": "^1.0.7",
