--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "homepage": "https://github.com/kaspernj/velocious#readme",
   "description": "",
   "dependencies": {
-    "async-mutex": "^0.5.0",
     "awaitery": "^1.0.1",
     "bcryptjs": "^3.0.2",
     "better-localstorage": "^1.0.7",
@@ -30,6 +29,7 @@
     "diggerize": "^1.0.5",
     "ejs": "^3.1.6",
     "env-sense": "^1.0.0",
+    "epic-locks": "^1.0.3",
     "escape-string-regexp": "^1.0.5",
     "incorporator": "^1.0.2",
     "inflection": "^3.0.0",
