--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "version": "1.0.85",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint",
     "test": "VELOCIOUS_TEST_DIR=../ cd spec/dummy && npx velocious test",
     "velocious": "asd"
   },
@@ -40,6 +41,9 @@
     "strftime": "^0.10.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
     "mssql": "^12.0.0",
     "mysql": "^2.18.1",
     "node-fetch": "^3.3.1",
