--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "eslint": "^9.39.1",
+    "eslint-plugin-jsdoc": "^61.4.1",
     "globals": "^16.5.0",
     "mssql": "^12.0.0",
     "mysql": "^2.18.1",
