More type safety 3

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "escape-string-regexp": "^1.0.5",
     "incorporator": "^1.0.2",
     "inflection": "^3.0.0",
+    "is-plain-object": "^5.0.0",
     "pure-uuid": "^1.8.1",
     "set-state-compare": "^1.0.58",
     "sql-escape-string": "^1.1.0",
