--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "lint": "eslint",
     "test": "VELOCIOUS_TEST_DIR=../ cd spec/dummy && npx velocious test",
+    "typecheck": "tsc --noEmit",
     "velocious": "asd"
   },
   "type": "module",
@@ -54,6 +55,7 @@
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "tedious": "^19.1.3",
+    "typescript": "^5.9.3",
     "uniqunize": "^1.0.1"
   }
 }
