--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "bin": {
-    "velocious": "bin/velocious.js"
+    "velocious": "dist/bin/velocious.js"
   },
   "name": "velocious",
   "version": "1.0.108",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": ["dist/**"],
   "scripts": {
+    "buildtypes": "rm -rf dist && tsc -p tsconfig.build.json",
     "lint": "eslint",
     "test": "VELOCIOUS_TEST_DIR=../ cd spec/dummy && npx velocious test",
+    "prepublishOnly": "npm run buildtypes",
     "typecheck": "tsc --noEmit",
     "velocious": "asd"
   },
