Even more work on types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "checkJs": true,
     "declaration": true,
     "declarationMap": true,
+    "inlineSourceMap": true,
+    "inlineSources": true,
     "outDir": "build",
     "target": "ES2024",
     "moduleResolution": "nodenext",
