Use Node commands

--- a/peak_flow.yml
+++ b/peak_flow.yml
@@ -49,8 +49,8 @@ builds:
       - wait-for-it mssql:1433
       - wait-for-it mariadb:3306
       - sleep 5
-      - cd spec/dummy && npx velocious db:create
-      - cd spec/dummy && npx velocious db:migrate
+      - cd spec/dummy && node ../../bin/velocious.js db:create
+      - cd spec/dummy && node ../../bin/velocious.js db:migrate
       - npm run test
   build_2:
     name: MS-SQL
@@ -58,8 +58,8 @@ builds:
       - cp spec/dummy/src/config/configuration.peakflow.mssql.js spec/dummy/src/config/configuration.js
       - wait-for-it mssql:1433
       - sleep 5
-      - cd spec/dummy && npx velocious db:create
-      - cd spec/dummy && npx velocious db:migrate
+      - cd spec/dummy && node ../../bin/velocious.js db:create
+      - cd spec/dummy && node ../../bin/velocious.js db:migrate
       - npm run test
   build_3:
     name: PG-SQL
@@ -68,8 +68,8 @@ builds:
       - wait-for-it mssql:1433
       - wait-for-it postgres:5432
       - sleep 5
-      - cd spec/dummy && npx velocious db:create
-      - cd spec/dummy && npx velocious db:migrate
+      - cd spec/dummy && node ../../bin/velocious.js db:create
+      - cd spec/dummy && node ../../bin/velocious.js db:migrate
       - npm run test
   build_4:
     name: SQLite
@@ -77,8 +77,8 @@ builds:
       - cp spec/dummy/src/config/configuration.peakflow.sqlite.js spec/dummy/src/config/configuration.js
       - wait-for-it mssql:1433
       - sleep 5
-      - cd spec/dummy && npx velocious db:create
-      - cd spec/dummy && npx velocious db:migrate
+      - cd spec/dummy && node ../../bin/velocious.js db:create
+      - cd spec/dummy && node ../../bin/velocious.js db:migrate
       - npm run test
   build_5:
     name: ESLint
