--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "copy:ejs": "cpy \"src/**/*.ejs\" build --parents",
     "lint": "eslint",
     "test": "cd spec/dummy && VELOCIOUS_TEST_DIR=$(pwd)/.. node ../../bin/velocious.js test",
+    "test:browser": "node scripts/test-browser.js",
     "prepublishOnly": "npm run build && chmod +x build/bin/velocious.js",
     "typecheck": "tsc --noEmit",
     "velocious": "asd",
@@ -58,6 +59,7 @@
     "@eslint/js": "^9.39.1",
     "chokidar-cli": "^3.0.0",
     "cpy-cli": "^6.0.0",
+    "esbuild": "^0.27.2",
     "eslint": "^9.39.1",
     "eslint-plugin-jsdoc": "^61.4.1",
     "globals": "^17.0.0",
@@ -68,6 +70,7 @@
     "require-context": "^1.1.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
+    "system-testing": "^1.0.60",
     "tedious": "^19.1.3",
     "typescript": "^5.9.3",
     "uniqunize": "^1.0.1"
