--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "velocious": "build/bin/velocious.js"
   },
   "name": "velocious",
-  "version": "1.0.182",
+  "version": "1.0.183",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "files": [
@@ -15,6 +15,7 @@
     "compile": "tsc -b && npm run copy:ejs && chmod +x build/bin/velocious.js",
     "copy:ejs": "cpy \"src/**/*.ejs\" build --parents",
     "lint": "eslint",
+    "release:patch": "bash scripts/release-patch.sh",
     "test": "cd spec/dummy && VELOCIOUS_TEST_DIR=$(pwd)/.. node ../../bin/velocious.js test",
     "test:browser": "node scripts/test-browser.js",
     "prepublishOnly": "npm run build && chmod +x build/bin/velocious.js",
