--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "epic-locks": "^1.0.7",
     "escape-string-regexp": "^1.0.5",
     "eventemitter3": "^5.0.1",
+    "gettext-universal": "^1.0.21",
     "incorporator": "^1.0.2",
     "inflection": "^3.0.0",
     "is-plain-object": "^5.0.0",
