--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "awaitery": "^1.0.6",
     "bcryptjs": "^3.0.2",
     "better-localstorage": "^1.0.7",
+    "chalk": "^5.6.2",
     "debounce": "^3.0.0",
     "diggerize": "^1.0.5",
     "ejs": "^3.1.6",
