Fix build EJS copy paths

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "all-checks": "npm run typecheck && npm run lint && npm run test",
     "build": "rm -rf build && npm run compile",
     "compile": "tsc -b && npm run copy:ejs && npm run copy:templates && chmod +x build/bin/velocious.js",
-    "copy:ejs": "cpy \"src/routes/**/*.ejs\" build",
+    "copy:ejs": "cpy \"src/routes/**/*.ejs\" build/src/routes",
     "copy:templates": "cpy \"src/templates/**/*.js\" build/src/templates",
     "lint": "eslint",
     "release:patch": "node scripts/release-patch.js",
