--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   ],
   "scripts": {
     "all-checks": "npm run typecheck && npm run lint && npm run test",
-    "build": "rm -rf build && npm run compile",
-    "compile": "tsc -b && npm run copy:ejs && npm run copy:templates && chmod +x build/bin/velocious.js",
+    "build": "node scripts/clean-build.js && npm run compile",
+    "compile": "tsc -b && npm run copy:ejs && npm run copy:templates && node scripts/ensure-bin-executable.js",
     "copy:ejs": "cpy \"src/routes/**/*.ejs\" build/src/routes",
     "copy:templates": "cpy \"src/templates/**/*.js\" build/src/templates",
     "lint": "eslint",
     "release:patch": "node scripts/release-patch.js",
-    "test": "cd spec/dummy && VELOCIOUS_TEST_DIR=$(pwd)/.. node ../../bin/velocious.js test",
+    "test": "node scripts/run-tests.js",
     "test:browser": "node scripts/test-browser.js",
-    "prepublishOnly": "npm run build && chmod +x build/bin/velocious.js",
+    "prepublishOnly": "npm run build && node scripts/ensure-bin-executable.js",
     "typecheck": "tsc --noEmit",
     "velocious": "asd",
     "watch": "tsc -w",
